welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (nbBiscuitPasse = 4) {
                      ^